attached_assets/Pasted-shared-schema-ts-706-3-error-TS2322-Type-boolean-is-not-assignable-to-type-never-error-share-1763986221590_1763986221594.txt
shared/schema.ts(706,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
error
shared/schema.ts(707,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(708,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(709,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(715,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(716,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(717,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(729,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(730,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(731,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(735,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(736,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(737,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(741,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(742,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(746,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(747,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(748,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(752,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(753,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1017,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1018,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1019,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1023,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1024,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1025,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1029,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1030,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1031,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1035,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1036,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1037,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1041,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1042,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1043,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1066,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1067,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1084,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1085,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1106,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1107,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1108,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1147,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1148,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
shared/schema.ts(1149,3): error TS2322: Type 'boolean' is not assignable to type 'never'.
✓ Backend build complete - JavaScript generated
==> Uploading build...
==> Uploaded in 22.2s. Compression took 14.3s
==> Build successful 🎉
==> Deploying...
==> Running 'npm run start'
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
node:internal/modules/cjs/loader:1404
  throw err;
  ^
Error: Cannot find module '/opt/render/project/src/dist/index.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1401:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1057:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1062:22)
    at Function._load (node:internal/modules/cjs/loader:1211:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}
Node.js v22.16.0
==> Exited with status 1
==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys
==> Running 'npm run start'
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
node:internal/modules/cjs/loader:1404
  throw err;
  ^
Error: Cannot find module '/opt/render/project/src/dist/index.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1401:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1057:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1062:22)
    at Function._load (node:internal/modules/cjs/loader:1211:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}
Node.js v22.16.0